--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -16,7 +16,23 @@ litters_df = read_csv("data/FAS_litters.csv")
 litters_df = janitor::clean_names(litters_df)
 ```
 
-## Takr a look at the data 
+## Take a look at the data 
+
+Printing in the console
+
+```{r}
+litters_df
+```
+
+```{r}
+tail(litters_df)
+```
+
+```{r}
+skimr::skim(litters_df)
+```
+
+
 
 
 
