other file formats -- xlsx, sas

--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -5,6 +5,8 @@ output: github_document
 
 ```{r setup}
 library(tidyverse)
+library(readxl)
+library(haven)
 ```
 
 ## Read in some data
@@ -36,6 +38,22 @@ skimr::skim(litters_df)
 ## Options to read_csv
 
 check out `?read_csv()` for more information. 
+
+## Other file formats
+
+Read in an excel file.
+
+```{r}
+mlb_df = read_excel ("./data/mlb11.xlsx")
+mlb_df
+```
+
+Read in a SAS file.
+
+```{r}
+pulse_df = read_sas("./data/public_pulse_data.sas7bdat")
+pulse_df
+```
 
 
 
