--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -67,5 +67,14 @@ litters_base
 litters_reader
 ```
 
+## Exporting data
+
+Export the mlb sub-table.
+
+```{r}
+write_csv(mlb_df,"./data/mlb_subtable.csv")
+```
+
+
 
 
