--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -7,6 +7,12 @@ output: github_document
 library(tidyverse)
 ```
 
+## Load in the FAS litters Data
+
+```{r}
+litters_df = read_csv("./data/FAS_litters.csv")
+litters_df = janitor::clean_names(litters_df)
+```
 
 
 
