--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -14,6 +14,44 @@ litters_df = read_csv("./data/FAS_litters.csv")
 litters_df = janitor::clean_names(litters_df)
 ```
 
+## 'select'
+
+Choose some columns and nor others.
+
+```{r}
+select(litters_df, group, litter_number)
+```
+
+```{r}
+select(litters_df, -litter_number)
+```
+
+Renaming columns ...
+
+```{r}
+select(litters_df, GROUP = group, LITTer_NUmBer = litter_number)
+```
+
+Select helpers
+
+```{r}
+select(litters_df, starts_with("gd"))
+```
+
+```{r}
+select(litters_df, litter_number, everything())
+```
+
+```{r}
+relocate(litters_df, litter_number)
+```
+
+
+
+
+
+
+
 
 
 
